--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
 
-  <title>Document</title>
+  <title>Chat</title>
   <script type="text/javascript" src="./index.js" defer=""></script>
   <link rel="stylesheet" href="./index.css">
 </head>
